dbsetup logic fixes, moved subtasks to own route
